--- a/assets/css/universal-theme.css
+++ b/assets/css/universal-theme.css
@@ -1,3 +1,33 @@
+@font-face {
+  font-family: "Lato-Regular";
+  src: local("Lato-Regular"), local("Lato Regular"), url("../fonts/Lato-Regular.woff") format("woff"), url("../fonts/Lato-Regular.woff2") format("woff2");
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Lato-Black";
+  src: local("Lato-Black"), local("Lato Black"), url("../fonts/Lato-Black.woff") format("woff"), url("../fonts/Lato-Black.woff2") format("woff2");
+  font-style: normal;
+  font-display: swap;
+}
+
+body {
+  font-family: 'Lato-Regular', sans-serif;
+  font-size: 14px;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.container {
+  max-width: 1140px;
+  width: 90%;
+  margin: auto;
+}
+
 .header {
   background-color: #262D33;
   padding-top: 15px;
@@ -83,8 +113,196 @@
   cursor: pointer;
 }
 
-.container {
-  max-width: 1140px;
-  width: 90%;
-  margin: auto;
+.home {
+  background-color: #e5e5e5;
+}
+
+.front-page-header {
+  padding-top: 30px;
+  background-color: #262D33;
+  position: relative;
+  height: 500px;
+}
+
+.hero {
+  position: relative;
+  background-color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  border-radius: 10px;
+  min-height: 570px;
+  z-index: 1;
+}
+
+.left {
+  -ms-flex-preferred-size: 75%;
+      flex-basis: 75%;
+  position: relative;
+  padding: 55px 55px 100px 55px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.left::after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: rgba(64, 48, 61, 0.4);
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
+
+.post-thumb {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 0;
+  height: 100%;
+}
+
+.author {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  z-index: 2;
+}
+
+.author .avatar {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+}
+
+.author-bio {
+  margin-left: 10px;
+}
+
+.author-name {
+  display: block;
+  font-size: 14px;
+  line-height: 20px;
+  color: rgba(255, 255, 255, 0.85);
+}
+
+.author-rank {
+  font-size: 12px;
+  line-height: 15px;
+  color: rgba(255, 255, 255, 0.4);
+}
+
+.post-text {
+  z-index: 2;
+}
+
+.post-text .post-categories {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.post-text .post-categories a {
+  color: #4592FF;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 900;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.post-text .post-title {
+  font-family: Roboto Slab;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 50px;
+  color: #fff;
+  margin-top: 20px;
+  margin-bottom: 50px;
+  max-width: 600px;
+}
+
+.post-text .more {
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-right: 50px;
+  padding-bottom: 10px;
+  color: #fff;
+  background-color: #4592FF;
+  text-decoration: none;
+  border-radius: 20px;
+  background-image: url(../images/arrow.svg);
+  background-repeat: no-repeat;
+  background-position: center right 20px;
+}
+
+.right {
+  -ms-flex-preferred-size: 25%;
+      flex-basis: 25%;
+}
+
+.posts-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+}
+
+.recommend {
+  margin: 20px 25px;
+  text-transform: uppercase;
+}
+
+.post {
+  margin: 0;
+  max-height: 110px;
+  padding: 17px 25px 19px 25px;
+  border-top: 1px solid #D9DADB;
+}
+
+.post-categories {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.post-categories a {
+  font-weight: 900;
+  font-size: 12px;
+  line-height: 15px;
+  color: #3BBDC4;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.post-permalink {
+  text-decoration: none;
+}
+
+.post:hover {
+  background: #f5f5f5;
+}
+
+.post-title {
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: normal;
+  color: #4B5157;
+  margin-top: 8px;
 }
