--- a/assets/css/universal-theme.css
+++ b/assets/css/universal-theme.css
@@ -172,6 +172,8 @@ body {
   bottom: 0;
   z-index: 0;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .author {
@@ -305,4 +307,65 @@ body {
   font-weight: normal;
   color: #4B5157;
   margin-top: 8px;
+}
+
+.article-list {
+  margin: 0;
+  padding: 0;
+  margin-top: 150px;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #30363D;
+  border-radius: 10px;
+}
+
+.article-permalink {
+  margin: 0;
+  text-decoration: none;
+  color: #fff;
+  width: 150px;
+}
+
+.article-item {
+  width: 25%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 30px 25px 35px 25px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+}
+
+.article-item:not(:last-child)::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  right: 0;
+  height: 70%;
+  width: 1px;
+  background-color: #4B5157;
+  display: block;
+}
+
+.article-item a:visited, .article-item a:hover {
+  color: #fff;
+}
+
+.article-title {
+  margin: 0;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
 }
