--- a/assets/css/universal-theme.css
+++ b/assets/css/universal-theme.css
@@ -370,11 +370,23 @@ body {
   line-height: 20px;
 }
 
+.main-grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
 .article-grid {
   margin: 30px 0;
   padding: 0;
   list-style: none;
-  width: 75%;
+  max-width: 850px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[3];
@@ -683,4 +695,62 @@ body {
   font-size: 12px;
   line-height: 15px;
   color: #939699;
+}
+
+.sidebar-front-page {
+  margin-top: 30px;
+  margin-left: 30px;
+}
+
+.widget-downloader {
+  background: #3BBDC4 url("../images/file.svg") no-repeat top 25px right 15px;
+  border-radius: 10px;
+  color: #fff;
+  padding: 25px;
+  padding-bottom: 65px;
+  position: relative;
+}
+
+.widget-downloader .widget-title {
+  font-family: Roboto Slab;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 25px;
+}
+
+.widget-downloader .widget-description {
+  font-size: 14px;
+  line-height: 20px;
+  color: #C1F4F5;
+  margin: 0;
+}
+
+.widget-downloader .widget-icon {
+  margin-right: 10px;
+}
+
+.widget-downloader .widget-link {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  padding-top: 12px;
+  padding-bottom: 13px;
+  border-top: 1px solid rgba(255, 255, 255, 0.75);
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 20px;
+  color: #fff;
+  text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
