--- a/assets/sass/_article-grid.sass
+++ b/assets/sass/_article-grid.sass
@@ -1,9 +1,14 @@
+
+.main-grid
+    display: flex
+    justify-content: space-between
+    align-items: flex-start
 .article
     &-grid
         margin: 30px 0
         padding: 0
         list-style: none
-        width: 75%
+        max-width: 850px
         display: grid
         grid-template-columns: repeat(3, 1fr)
         grid-template-rows: minmax(min, max) repeat(2, 1fr)
