--- a/assets/css/universal-theme.css
+++ b/assets/css/universal-theme.css
@@ -702,6 +702,22 @@ body {
   margin-left: 30px;
 }
 
+.widget {
+  background-color: #fff;
+  border-radius: 10px;
+}
+
+.widget-title {
+  padding: 20px 25px;
+  border-bottom: 1px solid #D9DADB;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 20px;
+  font-family: "lato black" sans-serif;
+  margin: 0;
+  text-transform: uppercase;
+}
+
 .widget-downloader {
   background: #3BBDC4 url("../images/file.svg") no-repeat top 25px right 15px;
   border-radius: 10px;
@@ -712,14 +728,19 @@ body {
 }
 
 .widget-downloader .widget-title {
+  padding: 0;
+  margin-top: 0;
   font-family: Roboto Slab;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 25px;
+  text-transform: capitalize;
+  border: none;
 }
 
 .widget-downloader .widget-description {
+  padding-top: 10px;
   font-size: 14px;
   line-height: 20px;
   color: #C1F4F5;
@@ -753,4 +774,50 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.widget .tagcloud {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-top: 25px;
+  padding-left: 25px;
+  padding-bottom: 30px;
+}
+
+.widget .tag-cloud-link {
+  margin-right: 10px;
+  margin-bottom: 15px;
+  text-decoration: none;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 20px;
+  padding: 5px 15px;
+  border: 1px solid #D9DADB;
+  border-radius: 5px;
+  color: #262D33;
+  text-transform: capitalize;
+}
+
+.widget-social .widget-link-facebook, .widget-social .widget-link-insta, .widget-social .widget-link-twitter, .widget-social .widget-link-youtube {
+  text-decoration: none;
+}
+
+.widget-social .widget-title {
+  text-align: center;
+  padding: 30px 25px;
+  border: none;
+}
+
+.widget-social-facebook, .widget-social-insta, .widget-social-twitter, .widget-social-youtube {
+  margin-bottom: 20px;
+  margin-left: 10px;
 }
