--- a/assets/sass/_sidebar.sass
+++ b/assets/sass/_sidebar.sass
@@ -3,6 +3,17 @@
         margin-top: 30px
         margin-left: 30px
 .widget
+    background-color: #fff
+    border-radius: 10px
+    &-title
+        padding: 20px 25px
+        border-bottom: 1px solid #D9DADB
+        font-weight: 900
+        font-size: 14px
+        line-height: 20px
+        font-family: "lato black" sans-serif
+        margin: 0
+        text-transform: uppercase
     &-downloader
         background: #3BBDC4 url('../images/file.svg') no-repeat top 25px right 15px
         border-radius: 10px
@@ -12,12 +23,17 @@
         position: relative
         .widget
             &-title
+                padding: 0
+                margin-top: 0
                 font-family: Roboto Slab
                 font-style: normal
                 font-weight: bold
                 font-size: 16px
                 line-height: 25px
+                text-transform: capitalize
+                border: none
             &-description
+                padding-top: 10px
                 font-size: 14px
                 line-height: 20px
                 color: #C1F4F5
@@ -41,3 +57,35 @@
                 display: flex
                 align-items: center
                 justify-content: center
+    .tagcloud
+        display: flex
+        align-items: center
+        justify-content: flex-start
+        flex-wrap: wrap
+        padding-top: 25px
+        padding-left: 25px
+        padding-bottom: 30px
+    .tag-cloud-link
+        margin-right: 10px
+        margin-bottom: 15px
+        text-decoration: none
+        font-weight: 900
+        font-size: 14px
+        line-height: 20px
+        padding: 5px 15px
+        border: 1px solid #D9DADB
+        border-radius: 5px
+        color: #262D33
+        text-transform: capitalize
+    &-social
+        .widget
+            &-link
+                &-facebook, &-insta, &-twitter, &-youtube
+                    text-decoration: none
+            &-title
+                text-align: center
+                padding: 30px 25px
+                border: none
+        &-facebook, &-insta, &-twitter, &-youtube
+            margin-bottom: 20px
+            margin-left: 10px
