--- a/assets/sass/_hero.sass
+++ b/assets/sass/_hero.sass
@@ -85,18 +85,20 @@
             margin-top: 20px
             margin-bottom: 50px
             max-width: 600px
-    .more
-        padding-left: 20px
-        padding-top: 10px
-        padding-right: 50px
-        padding-bottom: 10px
+.more
+    padding-left: 20px
+    padding-top: 10px
+    padding-right: 50px
+    padding-bottom: 10px
+    color: #fff
+    background-color: #4592FF
+    text-decoration: none
+    border-radius: 20px
+    background-image: url(../images/arrow.svg)
+    background-repeat: no-repeat
+    background-position: center right 20px
+    &:hover, &:focus, &:visited
         color: #fff
-        background-color: #4592FF
-        text-decoration: none
-        border-radius: 20px
-        background-image: url(../images/arrow.svg)
-        background-repeat: no-repeat
-        background-position: center right 20px
 
 .right
     flex-basis: 25%
