--- a/assets/sass/_article-list.sass
+++ b/assets/sass/_article-list.sass
@@ -8,7 +8,7 @@
         align-items: center
         background-color: #30363D
         border-radius: 10px
-
+        margin-bottom: 30px
     &-permalink
         margin: 0
         text-decoration: none
