--- a/assets/css/universal-theme.css
+++ b/assets/css/universal-theme.css
@@ -220,15 +220,6 @@ body {
   list-style: none;
 }
 
-.post-text .post-categories a {
-  color: #4592FF;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-weight: 900;
-  font-size: 12px;
-  line-height: 15px;
-}
-
 .post-text .post-title {
   font-family: Roboto Slab;
   font-weight: bold;
@@ -238,6 +229,18 @@ body {
   margin-top: 20px;
   margin-bottom: 50px;
   max-width: 600px;
+}
+
+.category-link {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 900;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.category-link.javascript {
+  color: #4592FF;
 }
 
 .more {
@@ -288,15 +291,6 @@ body {
   list-style: none;
 }
 
-.post-categories a {
-  font-weight: 900;
-  font-size: 12px;
-  line-height: 15px;
-  color: #3BBDC4;
-  text-transform: uppercase;
-  text-decoration: none;
-}
-
 .post-permalink {
   text-decoration: none;
 }
@@ -313,6 +307,31 @@ body {
   margin-top: 8px;
 }
 
+.post .category-link {
+  font-weight: 900;
+  font-size: 12px;
+  line-height: 15px;
+  color: #3BBDC4;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.post .category-link.css {
+  color: #3BBDC4;
+}
+
+.post .category-link.javascript {
+  color: #6E99AE;
+}
+
+.post .category-link.html {
+  color: #AC8EE3;
+}
+
+.post .category-link.web-design {
+  color: #FFA34D;
+}
+
 .article-list {
   margin: 0;
   padding: 0;
@@ -326,6 +345,7 @@ body {
           align-items: center;
   background-color: #30363D;
   border-radius: 10px;
+  margin-bottom: 30px;
 }
 
 .article-permalink {
@@ -387,7 +407,7 @@ body {
 }
 
 .article-grid {
-  margin: 30px 0;
+  margin: 0;
   padding: 0;
   list-style: none;
   max-width: 850px;
@@ -412,7 +432,7 @@ body {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-area: 1 / 1 / 2 / 3;
-  padding: 35px 35px 50px 35px;
+  height: 370px;
   position: relative;
 }
 
@@ -425,13 +445,20 @@ body {
 }
 
 .article-grid-item-1 .article-grid-permalink {
+  padding: 35px 0 13px 35px;
+  width: 100%;
+  height: 100%;
   text-decoration: none;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 
 .article-grid-item-1 .article-grid-title {
-  margin-top: 20px;
-  margin-bottom: 25px;
-  width: 260px;
+  margin: 0;
+  padding-top: 20px;
+  padding-bottom: 25px;
+  width: 360px;
   font-family: Roboto Slab;
   font-style: normal;
   font-weight: bold;
@@ -580,6 +607,7 @@ body {
   font-weight: bold;
   font-size: 16px;
   line-height: 25px;
+  text-transform: uppercase;
   color: #fff;
 }
 
@@ -672,15 +700,23 @@ body {
 
 .article-grid-item-default {
   height: 170px;
-  padding: 25px;
+  position: relative;
 }
 
 .article-grid-item-default .article-grid-permalink {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
   text-decoration: none;
 }
 
 .article-grid-item-default .article-grid-title {
   margin: 0;
+  margin-top: 25px;
+  margin-left: 25px;
+  margin-bottom: 5px;
   font-family: Roboto Slab;
   font-style: normal;
   font-weight: bold;
@@ -690,20 +726,29 @@ body {
 }
 
 .article-grid-item-default .article-grid-texte {
+  margin: 0;
+  margin-left: 25px;
+  margin-bottom: 10px;
+  width: 213px;
   font-size: 14px;
   line-height: 20px;
   color: #4B5157;
 }
 
 .article-grid-item-default .article-grid-date {
+  padding-left: 25px;
   font-size: 12px;
   line-height: 15px;
   color: #939699;
 }
 
+body {
+  counter-reset: section;
+}
+
 .sidebar-front-page {
-  margin-top: 30px;
   margin-left: 30px;
+  width: 23%;
 }
 
 .widget {
@@ -711,15 +756,12 @@ body {
   border-radius: 10px;
 }
 
-.widget-title {
-  padding: 20px 25px;
-  border-bottom: 1px solid #D9DADB;
-  font-weight: 900;
-  font-size: 14px;
-  line-height: 20px;
-  font-family: "lato black" sans-serif;
-  margin: 0;
-  text-transform: uppercase;
+.widget-top-title {
+  font-family: "Roboto Slab", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 25px;
 }
 
 .widget-downloader {
@@ -729,18 +771,6 @@ body {
   padding: 25px;
   padding-bottom: 65px;
   position: relative;
-}
-
-.widget-downloader .widget-title {
-  padding: 0;
-  margin-top: 0;
-  font-family: Roboto Slab;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 25px;
-  text-transform: capitalize;
-  border: none;
 }
 
 .widget-downloader .widget-description {
@@ -815,15 +845,106 @@ body {
   text-decoration: none;
 }
 
-.widget-social .widget-title {
+.widget-social .widget-top-title {
   text-align: center;
   padding: 30px 25px;
   border: none;
+  font-family: "Roboto Slab", sans-serif;
+  font-style: normal;
+  font-size: 20px;
+  line-height: 25px;
+  text-transform: none;
 }
 
 .widget-social-facebook, .widget-social-insta, .widget-social-twitter, .widget-social-youtube {
   margin-bottom: 20px;
   margin-left: 10px;
+}
+
+.widget_tag_cloud .widget-top-title {
+  padding: 20px 25px;
+  border-bottom: 1px solid #D9DADB;
+  font-family: "Lato-Black", sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 20px;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.widget-recent-posts {
+  margin: 0;
+  padding: 0;
+}
+
+.widget-bottom-title {
+  margin: 0;
+  padding-top: 20px;
+  padding-bottom: 19px;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  border-bottom: 1px solid #D9DADB;
+}
+
+.widget-post {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 17px 25px 17px 25px;
+  text-decoration: none;
+  position: relative;
+}
+
+.widget-post:not(:last-child)::after {
+  content: '';
+  border-bottom: 1px solid #D9DADB;
+  position: absolute;
+  bottom: 0;
+  width: 213px;
+}
+
+.widget-post::before {
+  counter-increment: section;
+  content: counter(section);
+  position: absolute;
+  font-family: "Lato-Black";
+  font-weight: 900;
+  right: 25px;
+  font-size: 70px;
+  line-height: 50px;
+  color: #262D33;
+  opacity: 0.08;
+  font-style: italic;
+}
+
+.widget-post-title {
+  margin: 0;
+  font-size: 14px;
+  line-height: 20px;
+  color: #4B5157;
+}
+
+.widget-post-time {
+  font-size: 12px;
+  line-height: 15px;
+  color: #939699;
+}
+
+.widget-img {
+  width: 60px;
+  height: 60px;
+}
+
+.widget-info {
+  padding-left: 10px;
 }
 
 .investigation {
@@ -841,6 +962,18 @@ body {
   line-height: 50px;
 }
 
+.main-records {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
 .records-list {
   width: 848px;
   margin: 0;
@@ -853,41 +986,24 @@ body {
 .records-item {
   list-style: none;
   padding: 25px;
-  position: relative;
-  z-index: 0;
-}
-
-.records-permalink {
-  text-decoration: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
 }
 
-.records-permalink::after {
-  content: ' ';
+.records-item:not(:last-child)::after {
+  content: '';
   border-bottom: 1px solid #D9DADB;
   position: absolute;
-  z-index: 1;
-  width: 798px;
   bottom: 0;
-}
-
-.records-permalink::last-child {
-  border: none;
-}
-
-.records-category {
-  text-transform: uppercase;
-  font-weight: 900;
-  font-size: 12px;
-  line-height: 15px;
+  width: 798px;
 }
 
 .records-img {
@@ -924,6 +1040,29 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #4B5157;
+}
+
+.category-link {
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.category-link.news {
+  color: #4592FF;
+}
+
+.category-link.opinions {
+  color: #3BBDC4;
+}
+
+.category-link.hotter {
+  color: #FF4F52;
+}
+
+.category-link.compilations {
+  color: #AC8EE3;
 }
 
 .records-info .info-date {
