--- a/assets/sass/_article-grid.sass
+++ b/assets/sass/_article-grid.sass
@@ -5,7 +5,7 @@
     align-items: flex-start
 .article
     &-grid
-        margin: 30px 0
+        margin: 0
         padding: 0
         list-style: none
         max-width: 850px
@@ -20,7 +20,8 @@
             overflow: hidden
             &-1
                 grid-area: 1 / 1 / 2 / 3
-                padding: 35px 35px 50px 35px
+
+                height: 370px
                 position: relative
                 .category-name
                     font-weight: 900
@@ -31,11 +32,18 @@
                 .article
                     &-grid
                         &-permalink
+                            padding: 35px 0 13px 35px
+                            width: 100%
+                            height: 100%
                             text-decoration: none
+                            position: absolute
+                            left: 0
+                            top: 0
                         &-title
-                            margin-top: 20px
-                            margin-bottom: 25px
-                            width: 260px
+                            margin: 0
+                            padding-top: 20px
+                            padding-bottom: 25px
+                            width: 360px
                             font-family: Roboto Slab
                             font-style: normal
                             font-weight: bold
@@ -127,6 +135,7 @@
                         font-weight: bold
                         font-size: 16px
                         line-height: 25px
+                        text-transform: uppercase
                         color: #fff
                     &-info
                         .author
@@ -178,12 +187,20 @@
                         margin: 0
             &-default
                 height: 170px
-                padding: 25px
+                position: relative
                 .article-grid
                     &-permalink
+                        position: absolute
+                        left: 0
+                        top: 0
+                        width: 100%
+                        height: 100%
                         text-decoration: none
                     &-title
                         margin: 0
+                        margin-top: 25px
+                        margin-left: 25px
+                        margin-bottom: 5px
                         font-family: Roboto Slab
                         font-style: normal
                         font-weight: bold
@@ -191,10 +208,15 @@
                         line-height: 25px
                         color: #262D33
                     &-texte
+                        margin: 0
+                        margin-left: 25px
+                        margin-bottom: 10px
+                        width: 213px
                         font-size: 14px
                         line-height: 20px
                         color: #4B5157
                     &-date
+                        padding-left: 25px
                         font-size: 12px
                         line-height: 15px
                         color: #939699
