--- a/assets/sass/_records.sass
+++ b/assets/sass/_records.sass
@@ -1,3 +1,8 @@
+.main-records
+    display: flex
+    justify-content: space-between
+    align-items: flex-start
+
 .records
     &-list
         width: 848px
@@ -9,25 +14,17 @@
     &-item
         list-style: none
         padding: 25px
-    &-permalink
-        text-decoration: none
         display: flex
-        justify-content: flex-start
+        justify-content: center
         align-items: center
         position: relative
         &:not(:last-child)::after
             content: ''
             border-bottom: 1px solid #D9DADB
             position: absolute
-            width: 798px
             bottom: 0
+            width: 798px
 
-    &-category
-        text-transform: uppercase
-        font-weight: 900
-        font-size: 12px
-        line-height: 15px
-        color: #4592FF
     &-img
         height: 195px
         width: 336px
@@ -49,6 +46,19 @@
         font-size: 14px
         line-height: 20px
         color: #4B5157
+.category-link
+    text-transform: uppercase
+    font-weight: 900
+    font-size: 12px
+    line-height: 15px
+    &.news
+        color: #4592FF
+    &.opinions
+        color: #3BBDC4
+    &.hotter
+        color: #FF4F52
+    &.compilations
+        color: #AC8EE3
 .records-info
     .info
         &-date
