--- a/assets/sass/_records.sass
+++ b/assets/sass/_records.sass
@@ -66,12 +66,12 @@
             color: #939699
         &-icon
             margin-right: 5px
-            color: #939699
+            fill: #BCBFC2
         &-count
             margin-right: 10px
             color: #939699
         &-likes-icon
             margin-right: 5px
-            color: #939699
+            fill: #BCBFC2
         &-likes-count
             color: #939699
