--- a/assets/sass/_article-grid.sass
+++ b/assets/sass/_article-grid.sass
@@ -83,6 +83,7 @@
                             color: #939699
                             .comments-icon
                                 margin-right: 5px
+
             &-2
                 grid-area: 1 / 3 / 2 / 4
                 position: relative
@@ -148,6 +149,7 @@
                                 margin-right: 10px
                             &-info
                                 display: flex
+                                justify-content: space-between
                                 align-items: center
                                 flex-wrap: wrap
                                 color: #fff
@@ -160,8 +162,6 @@
                                     font-weight: normal
 
                                 &-comments
-                                    display: flex
-                                    flex-basis: 100%
                                     opacity: 0.5
                                     .comments-icon, .comments-count
                                         margin-left: 5px
