--- a/assets/sass/_hero.sass
+++ b/assets/sass/_hero.sass
@@ -11,7 +11,7 @@
     display: flex
     overflow: hidden
     border-radius: 10px
-    min-height: 570px
+    //height: 570px
     z-index: 1
 .left
     flex-basis: 75%
@@ -146,3 +146,26 @@
             color: #AC8EE3
         &.web-design
             color: #FFA34D
+
+@media screen and ( max-width: 1024px )
+    .left
+        flex-basis: 70%
+    .right
+        flex-basis: 30%
+
+@media screen and ( max-width: 768px )
+    .hero
+        flex-direction: column
+    .post-title
+        margin-bottom: 30px
+    .post-text
+        margin-top: 30px
+    .front-page-header
+        height: auto
+        padding-bottom: 30px
+@media screen and ( max-width: 576px )
+    .hero
+        display: flex
+        justify-content: center
+        .left
+            padding: 20px 20px 60px 20px
