--- a/assets/sass/_investigation.sass
+++ b/assets/sass/_investigation.sass
@@ -10,3 +10,8 @@
         font-weight: bold
         font-size: 40px
         line-height: 50px
+@media screen and ( max-width: 576px )
+    .investigation
+        &-title
+            font-size: 35px
+            line-height: 45px
