--- a/assets/sass/_hero.sass
+++ b/assets/sass/_hero.sass
@@ -29,7 +29,7 @@
         left: 0
         top: 0
         z-index: 1
-.post-thumb
+.posts-thumb
     position: absolute
     left: 0
     right: 0
@@ -110,7 +110,7 @@
 .recommend
     margin: 20px 25px
     text-transform: uppercase
-.post
+.posts
     margin: 0
     max-height: 110px
     padding: 17px 25px 19px 25px
