--- a/assets/sass/_header.sass
+++ b/assets/sass/_header.sass
@@ -15,6 +15,30 @@
         align-items: center
         &-toggle
             display: none
+    .custom
+        &-logo
+            width: 40px
+    &-light
+        background-color: #fff
+        .logo
+            &-name
+                color: #4592FF
+        .menu
+            &-item
+                a
+                    color: #939699
+        .search
+            &-form
+                input
+                    background-color: #F5F5F5
+.logo
+    display: flex
+    align-items: center
+    &-name
+        font-family: "Roboto Slab"
+        font-size: 24px
+        color: #fff
+        margin-left: 10px
 
 .menu-item
     a
