--- a/assets/sass/_header.sass
+++ b/assets/sass/_header.sass
@@ -36,9 +36,10 @@
     align-items: center
     &-name
         font-family: "Roboto Slab"
-        font-size: 24px
+        font-size: 26px
         color: #fff
         margin-left: 10px
+        text-decoration: none
 
 .menu-item
     a
