--- a/assets/sass/_single.sass
+++ b/assets/sass/_single.sass
@@ -160,7 +160,7 @@
         font-style: normal
         font-weight: bold
     h1
-        font-size: 30px
+        font-size: 55px
     h2
         font-size: 25px
     h3
@@ -201,3 +201,23 @@
             z-index: -1
     cite
         font-style: normal
+
+.post-footer
+    .meks_ess
+        justify-content: start
+        margin-bottom: 90px
+        a
+            max-width: 180px
+            line-height: 30px
+        &_share_label
+            h5
+                font-family: Roboto Slab
+                font-weight: bold
+                font-size: 25px
+                line-height: 30px
+    .divider
+        border-top: 1px solid #D9DADB
+        display: block
+        width: 623px
+        margin-top: 60px
+        margin-bottom: 30px
