--- a/assets/sass/_article-grid.sass
+++ b/assets/sass/_article-grid.sass
@@ -76,14 +76,14 @@
                             font-size: 14px
                             line-height: 20px
                             color: #4B5157
-
                         &-comments
                             display: flex
                             align-items: center
                             color: #939699
                             .comments-icon
                                 margin-right: 5px
-
+                            span
+                                font-size: 16px
             &-2
                 grid-area: 1 / 3 / 2 / 4
                 position: relative
@@ -169,6 +169,8 @@
                                         margin-left: 5px
                                     img.comments-icon
                                         margin-left: auto
+                                    .comments-count
+                                        font-size: 16px
             &-3
                 grid-area: 2 / 1 / 4 / 2
                 .article
