--- a/assets/sass/_header.sass
+++ b/assets/sass/_header.sass
@@ -63,6 +63,7 @@
             border-radius: 10px
             border: none
             padding: 10px 25px
+            color: #262D33
             &::placeholder
                 color: #939699
         button
